--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1105,14 +1105,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 20,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
-        "outputId": "2e31c282-8fa2-46df-a544-3deedda5255d"
+        "outputId": "5e324d17-dd6a-4e93-b7d5-b235fda790c1"
       },
       "outputs": [
         {
@@ -1123,12 +1123,12 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 20
         }
       ],
       "source": [
         "#si-favorite\n",
-        "\n",
+        "import re\n",
         "input_string = \"My favorite number is 8\" # an example of possible input\n",
         "\n",
         "hasNumber = re.search(r'[0-9]{1}', input_string)\n",
