--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1415,12 +1415,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "3c13fbb4-46a0-4604-88f2-6521ca0ecabf",
       "metadata": {
-        "id": "3c13fbb4-46a0-4604-88f2-6521ca0ecabf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3c13fbb4-46a0-4604-88f2-6521ca0ecabf",
+        "outputId": "c41c48cd-8918-4af8-e97f-999d0b7d41a6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter your phone number: 402-250-8125\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
         "# Ask user for phone number\n",
         "myNumber = input(\"Please enter your phone number: \")\n",
@@ -1610,14 +1623,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
-        "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
+        "outputId": "7f684ac7-c741-45e4-f247-ab8722fb1941"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ],
       "source": [
-        "#si-date-check"
+        "#si-date-check\n",
+        "import re\n",
+        "\n",
+        "datecheck = re.search(r'(3[01]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}', \"\")\n",
+        "\n",
+        "print(bool(datecheck))"
       ]
     },
     {
