--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1645,7 +1645,7 @@
         "#si-date-check\n",
         "import re\n",
         "\n",
-        "datecheck = re.search(r'(3[01]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}', \"\")\n",
+        "dateCheck = re.search(r'(3[01]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}', \"\")\n",
         "\n",
         "print(bool(datecheck))"
       ]
