--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1623,14 +1623,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 35,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
-        "outputId": "7f684ac7-c741-45e4-f247-ab8722fb1941"
+        "outputId": "2c877d7e-34d4-4586-c301-1a46b76a71c2"
       },
       "outputs": [
         {
@@ -1647,7 +1647,7 @@
         "\n",
         "dateCheck = re.search(r'(3[01]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}', \"\")\n",
         "\n",
-        "print(bool(datecheck))"
+        "print(bool(dateCheck))"
       ]
     },
     {
