--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1623,14 +1623,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 44,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
-        "outputId": "2c877d7e-34d4-4586-c301-1a46b76a71c2"
+        "outputId": "c2be04e2-18b5-4eb6-ce21-a47227ea1dc0"
       },
       "outputs": [
         {
@@ -1645,9 +1645,7 @@
         "#si-date-check\n",
         "import re\n",
         "\n",
-        "dateCheck = re.search(r'(3[01]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}', \"\")\n",
-        "\n",
-        "print(bool(dateCheck))"
+        "dateCheck = print(bool(re.search(r'\\b(3[01]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}\\b', \"\")))\n"
       ]
     },
     {
