Turned solveit2 into a real func

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1105,25 +1105,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 47,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
-        "outputId": "5e324d17-dd6a-4e93-b7d5-b235fda790c1"
+        "outputId": "d03d6ebd-3ba9-437f-bd3d-a5a58bd6a115"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<re.Match object; span=(22, 23), match='8'>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 20
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
         }
       ],
       "source": [
@@ -1131,7 +1128,7 @@
         "import re\n",
         "input_string = \"My favorite number is 8\" # an example of possible input\n",
         "\n",
-        "hasNumber = re.search(r'[0-9]{1}', input_string)\n",
+        "hasNumber = print(bool(re.search(r'\\b[0-9]{1}\\b', input_string)))\n",
         "hasNumber"
       ]
     },
@@ -1623,14 +1620,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 57,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
-        "outputId": "c2be04e2-18b5-4eb6-ce21-a47227ea1dc0"
+        "outputId": "6e97701e-13d5-48dc-b13f-e160265eb758"
       },
       "outputs": [
         {
@@ -1644,8 +1641,8 @@
       "source": [
         "#si-date-check\n",
         "import re\n",
-        "\n",
-        "dateCheck = print(bool(re.search(r'\\b(3[01]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}\\b', \"\")))\n"
+        "def dateCheck(str):\n",
+        "  return print(bool(re.search(r'\\b(3[01]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}\\b', str)))"
       ]
     },
     {
