--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1105,22 +1105,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 59,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
-        "outputId": "d03d6ebd-3ba9-437f-bd3d-a5a58bd6a115"
+        "outputId": "487cdf58-62ea-446d-8545-184bdfddb8a3"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
         }
       ],
       "source": [
@@ -1128,7 +1131,7 @@
         "import re\n",
         "input_string = \"My favorite number is 8\" # an example of possible input\n",
         "\n",
-        "hasNumber = print(bool(re.search(r'\\b[0-9]{1}\\b', input_string)))\n",
+        "hasNumber = bool(re.search(r'\\b[0-9]{1}\\b', input_string))\n",
         "hasNumber"
       ]
     },
