--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1105,33 +1105,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 67,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
-        "outputId": "487cdf58-62ea-446d-8545-184bdfddb8a3"
+        "outputId": "9465cf83-4a58-4dca-b905-3f1979c0fa7d"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "True"
+              "<re.Match object; span=(22, 23), match='2'>"
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 67
         }
       ],
       "source": [
         "#si-favorite\n",
         "import re\n",
-        "input_string = \"My favorite number is 8\" # an example of possible input\n",
+        "input_string = \"My favorite number is 2\" # an example of possible input\n",
         "\n",
-        "hasNumber = bool(re.search(r'\\b[0-9]{1}\\b', input_string))\n",
+        "hasNumber = re.search(r'\\b[0-9]{1}\\b', input_string)\n",
         "hasNumber"
       ]
     },
