--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1623,29 +1623,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 88,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
-        "outputId": "6e97701e-13d5-48dc-b13f-e160265eb758"
+        "outputId": "9c15f8f8-11cb-4f5e-bbd4-0b7e9ea7a38d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "False\n"
+            "True\n"
           ]
         }
       ],
       "source": [
         "#si-date-check\n",
         "import re\n",
-        "def dateCheck(str):\n",
-        "  return print(bool(re.search(r'\\b(3[01]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}\\b', str)))"
+        "def dateCheck(date):\n",
+        "  return print(bool(re.search(r'\\b(3[0-1]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}\\b', date)))\n",
+        "dateCheck(\"31-12-2020\")"
       ]
     },
     {
