reup after update

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1105,33 +1105,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 3,
       "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
-        "outputId": "9465cf83-4a58-4dca-b905-3f1979c0fa7d"
+        "outputId": "93793c72-f554-42f4-d273-37bb33e10703"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<re.Match object; span=(22, 23), match='2'>"
+              "False"
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 3
         }
       ],
       "source": [
         "#si-favorite\n",
         "import re\n",
-        "input_string = \"My favorite number is 2\" # an example of possible input\n",
+        "input_string = \"My favorite number is 12\" # an example of possible input\n",
         "\n",
-        "hasNumber = re.search(r'\\b[0-9]{1}\\b', input_string)\n",
+        "hasNumber = bool(re.search(r'\\b[0-9]{1}\\b', input_string))\n",
         "hasNumber"
       ]
     },
@@ -1623,29 +1623,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 14,
       "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
-        "outputId": "9c15f8f8-11cb-4f5e-bbd4-0b7e9ea7a38d"
+        "outputId": "404bd6ad-94c2-4eec-c0a4-23c0c8c0c444"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ],
       "source": [
         "#si-date-check\n",
         "import re\n",
         "def dateCheck(date):\n",
-        "  return print(bool(re.search(r'\\b(3[0-1]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}\\b', date)))\n",
+        "  return bool(re.search(r'\\b(3[0-1]|[012][1-9])-(1[012]|0[1-9])-[\\d]{4}\\b', date))\n",
         "dateCheck(\"31-12-2020\")"
       ]
     },
@@ -1674,7 +1677,8 @@
       },
       "outputs": [],
       "source": [
-        "#si-email-check"
+        "#si-email-check\n",
+        "\n"
       ]
     }
   ],
