--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1670,16 +1670,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
-        "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
+        "outputId": "72b95a15-5187-4198-9e86-b641cd860545"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ],
       "source": [
         "#si-email-check\n",
-        "\n"
+        "\n",
+        "def emailCheck(email):\n",
+        "  return bool(re.search(r'\\b(((\\d([A-Z])*[a-z]*)+)@(\\d*[A-Z]*[a-z]*)+((.com)|(.org)|.edu))\\b', email))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YDDOLZ2MJZN6"
+      },
+      "id": "YDDOLZ2MJZN6",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
