--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1670,18 +1670,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 31,
       "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
       "metadata": {
-        "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "75cf2c42-4f50-420a-9898-fa22f4293fa4",
+        "outputId": "f14d6c13-ec3c-4639-a4ea-efab28dce4aa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ],
       "source": [
         "#si-email-check\n",
         "import re\n",
         "\n",
         "def emailCheck(email):\n",
-        "  return bool(re.search(r'\\b(((\\d([A-Z])*[a-z]*)+)@(\\d*[A-Z]*[a-z]*)+((.com)|(.org)|.edu))\\b', email))"
+        "  return bool(re.search(r'\\b((((\\d?([A-Z])*[a-z])+(@)+))+(\\d*[A-Z]*[a-z]*\\d*)((\\.com)|(\\.org)|\\.edu))\\b', email))\n",
+        "emailCheck('stumptruck@happy2.org')"
       ]
     },
     {
